code/typescript/CompanyLogo/v5/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Company Logo client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v5.0.0-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/badge/npm-v0.41.1-orange)](https://www.npmjs.com/package/@factset/sdk-companylogo/v/0.41.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet collected company logos through an API that seamlessly integrates with company fundamentals and estimates data
(listed equities data available via the stocks API), quotes, time series, and other Digital APIs.

The Company Logo API provides access to logos for a global universe of listed companies. The logos can be accessed by using national and
international identifiers like ISIN, CUSIP, WKN, Valor, etc. and are a nice feature for comprehensive visualizations of equities
on overview pages (factsheets).

Logo collection and maintenance takes into account IPOs, M&A notifications, and further consistency check mechanisms.

The Company Logo API seamlessly integrates with the [Stocks API](https://developer.factset.com/api-catalog/stocks-api-digital-portals)
for equities and estimates data and the [Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api), allowing
access to detailed price and performance information of listings. The [Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api)
also supports basic security identifier cross-reference.
For direct access to price histories for charting, please refer to the
[Real-Time Time Series API](https://developer.factset.com/api-catalog/real-time-time-series-api).
 


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 5.0.0
- SDK version: 0.41.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-companylogo@0.41.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-companylogo@0.41.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, CompanyLogosApi } = require('@factset/sdk-companylogo');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new CompanyLogosApi();
const opts = {
  'postCompanyLogoRequest': {"data":{"identifier":{"values":["FDS-US"],"type":"tickerRegion"},"format":"square","size":{"predefined":["small","medium","large","vector"]}}} // PostCompanyLogoRequest | Request Body
};

// Call api endpoint
apiInstance.postCompanyLogo(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-companylogo');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/company-logo/v5*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*companylogo.CompanyLogosApi* | [**postCompanyLogo**](docs/CompanyLogosApi.md#postCompanyLogo) | **POST** /logo/list | Retrieves logos for one or more publicly traded companies.


## Documentation for Models

 - [companylogo.CompanyLogoItemObject](docs/CompanyLogoItemObject.md)
 - [companylogo.CompanyLogoObject](docs/CompanyLogoObject.md)
 - [companylogo.ErrorDetail](docs/ErrorDetail.md)
 - [companylogo.ErrorResponse](docs/ErrorResponse.md)
 - [companylogo.ErrorResponseMeta](docs/ErrorResponseMeta.md)
 - [companylogo.ErrorResponseMetaStatus](docs/ErrorResponseMetaStatus.md)
 - [companylogo.InlineResponse200](docs/InlineResponse200.md)
 - [companylogo.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [companylogo.PostCompanyLogoRequest](docs/PostCompanyLogoRequest.md)
 - [companylogo.PostCompanyLogoRequestData](docs/PostCompanyLogoRequestData.md)
 - [companylogo.PostCompanyLogoRequestDataIdentifier](docs/PostCompanyLogoRequestDataIdentifier.md)
 - [companylogo.PostCompanyLogoRequestDataSize](docs/PostCompanyLogoRequestDataSize.md)
 - [companylogo.PostCompanyLogoRequestDataSizeCustom](docs/PostCompanyLogoRequestDataSizeCustom.md)
 - [companylogo.PostCompanyLogoRequestMeta](docs/PostCompanyLogoRequestMeta.md)
 - [companylogo.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
